--- a/hugo.yaml
+++ b/hugo.yaml
@@ -388,6 +388,9 @@ params:
     pageNotFound: "Page not found"
     emailText: "Check out this site"
 
+  caches:
+    images:
+      dir: :cacheDir/images
 
   #customScripts: -| # You can add custom scripts which will be added before </body> tag
   #  <script type="text/javascript"><!-- any script here --></script>
