Update page title

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,6 +1,6 @@
 baseURL: "https://odai357.github.io/pehtheme/"
 languageCode: "en-us"
-title: "Hugo Profile"
+title: "Odai-泽鑫 - Profile"
 theme: hugo-profile
 relativeURLs: true
 canonifyURLs: true
